--- a/templates/sudoers.j2
+++ b/templates/sudoers.j2
@@ -10,19 +10,19 @@
 {% endif %}
 
 {% if use_sudo == 'none' %}
-# No sudo permissions defined for {{ item.name }}
+# No sudo permissions defined for {{ item.username }}
 {% elif use_sudo == True %}
-{{ item.name }} ALL=(ALL) ALL
+{{ item.username }} ALL=(ALL) ALL
 {% elif use_sudo == 'nopasswd' %}
-{{ item.name }} ALL=(ALL) NOPASSWD:ALL
+{{ item.username }} ALL=(ALL) NOPASSWD:ALL
 {% elif use_sudo == "custom" and item.sudo_custom is defined %}
 {%  for custom in item.sudo_custom %}
 {%    if custom.nopasswd is defined and custom.nopasswd == True %}
-{{ item.name }} ALL=({{ custom.name | default('ALL') }}) NOPASSWD:{{ custom.command_line }}
+{{ item.username }} ALL=({{ custom.name | default('ALL') }}) NOPASSWD:{{ custom.command_line }}
 {%    else %}
-{{ item.name }} ALL=({{ custom.name | default('ALL') }}) {{ custom.command_line }}
+{{ item.username }} ALL=({{ custom.name | default('ALL') }}) {{ custom.command_line }}
 {%    endif %}
 {%  endfor %}
 {% else %}
-# Access via sudo not permitted for {{ item.name }}
+# Access via sudo not permitted for {{ item.username }}
 {% endif %}
